--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Tribute Page</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Anton&family=Lato&display=swap" rel="stylesheet">
-
+	<link rel="stylesheet" type="text/css" href="https://s07k.github.io/tribute-page/css/style.css">
 </head>
 <body>
 	<main id = "main">
