--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<title>Tribute Page</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Anton&family=Lato&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="https://s07k.github.io/tribute-page/css/style.css">
+
 </head>
 <body>
 	<main id = "main">
 		<div id = "title">
 			<h1><b>The Planet Mars</b></h1>
-			<p style="font-size: 16px;">The man who saved a billion lives</p>
+			<p style="font-size: 16px;">Mars is there, waiting to be reached.</p>
 		</div>
 		<div id = "img-div">
 			<img src="https://images.unsplash.com/photo-1537183673931-f890242dbaef?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" id = "image">
@@ -27,8 +27,9 @@
 					Mars was named by the ancient Romans for their god of war because its reddish color was reminiscent of blood. Other civilizations also named the planet for this attribute; for example, the Egyptians called it "Her Desher," meaning "the red one." Even today, it is frequently called the "Red Planet" because iron minerals in the Martian dirt oxidize, or rust, causing the surface to look red.
 				</p>
 				<li>
-					<strong>Exploration</strong>
-					<br>
+					<strong>
+						Exploration
+					</strong>
 					<p>
 						No planet beyond Earth has been studied as intensely as Mars. Recorded observations of Mars date as far back as the era of ancient Egypt over 4,000 years ago, when they charted the planet's movements in the sky. Today, a science fleet of robotic spacecraft study Mars from all angles.
 						<ul>
@@ -56,19 +57,25 @@
 					</p>
 				</li>
 				<li>
-					Structure
+					<strong>
+						Structure
+					</strong>
 					<p>
 						Mars has a dense core at its center between 930 and 1,300 miles (1,500 to 2,100 kilometers) in radius. It's made of iron, nickel and sulfur. Surrounding the core is a rocky mantle between 770 and 1,170 miles (1,240 to 1,880 kilometers) thick, and above that, a crust made of iron, magnesium, aluminum, calcium and potassium. This crust is between 6 and 30 miles (10 to 50 kilometers) deep.
 					</p>
 				</li>
 				<li>
-					Formation
+					<strong>
+						Formation
+					</strong>
 					<p>
 						When the solar system settled into its current layout about 4.5 billion years ago, Mars formed when gravity pulled swirling gas and dust in to become the fourth planet from the Sun. Mars is about half the size of Earth, and like its fellow terrestrial planets, it has a central core, a rocky mantle and a solid crust.
 					</p>
 				</li>
 				<li>
-					Atmosphere
+					<strong>
+						Atmosphere
+					</strong>
 					<p>
 						Mars has a thin atmosphere made up mostly of carbon dioxide, nitrogen and argon gases. To our eyes, the sky would be hazy and red because of suspended dust instead of the familiar blue tint we see on Earth. Mars' sparse atmosphere doesn't offer much protection from impacts by such objects as meteorites, asteroids and comets.
 					</p>
@@ -80,19 +87,23 @@
 					</p>
 				</li>
 				<li>
-					Magnetosphere
+					<strong>
+						Magnetosphere
+					</strong>
 					<p>
 						Mars has no global magnetic field today, but areas of the Martian crust in the southern hemisphere are highly magnetized, indicating traces of a magnetic field from 4 billion years ago.​
 					</p>
 				</li>
 				<li>
-					Rings
+					<strong>
+						Rings
+					</strong>
 					<p>
 						Mars has no rings. However, in 50 million years when Phobos crashes into Mars or breaks apart, it could create a dusty ring around the Red Planet.
 					</p>
 				</li>
 			</ul>
-			<p class="qoute"><i>
+			<p class="quote"><i>
 				Scientists don't expect to find living things currently thriving on Mars. Instead, they're looking for "signs of life" that existed long ago, when Mars was warmer and covered with water.</i>
 			</p>
 			<h3 class="foot">If you have time, you should read more about this amazing planet.. <a href="#" target="_blank" id="tribute-link">Click me</a>.</h3>
