Resolved the issue in the website

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<p class="quote"><i>
 				Scientists don't expect to find living things currently thriving on Mars. Instead, they're looking for "signs of life" that existed long ago, when Mars was warmer and covered with water.</i>
 			</p>
-			<h3 class="foot">If you have time, you should read more about this amazing planet.. <a href="#" target="_blank" id="tribute-link">Click me</a>.</h3>
+			<h3 class="foot">If you wanna know about NASA  Mars Exploration Program... <a href="https://mars.nasa.gov/" target="_blank" id="tribute-link">Click me</a>.</h3>
 			<h6 style="float: right;">Source : NASA</h6>
 		</div>
 	</main>
